Formatting Team HTML

--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -24,66 +24,56 @@
         <div class="row">
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
-    <div class="card-header">
+    <div class="card-header bg-primary text-white">
         <h2 class="card-title">Gogul</h2>
-        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+        <h3 class="card-title"><i class="fas fa-layer-group mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 1</li>
-            <li class="list-group-item">Email: <a href="mailto:gogul@yahoo.com">gogul@yahoo.com</a></li>
-            <li class="list-group-item">Office number: 12345</li>
+            <li class="list-group-item">Email: <a href="mailto:gogul@gmail.com">gogul@gmail.com</a></li>
+            <li class="list-group-item">Office number: 800</li>
         </ul>
     </div>
 </div>
+
 <div class="card employee-card">
-    <div class="card-header">
+    <div class="card-header bg-success text-white">
         <h2 class="card-title">Viggnesh</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+        <h3 class="card-title"><i class="fas fa-user-cog mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 2</li>
-            <li class="list-group-item">Email: <a href="mailto:viggnesh@gmail.com">viggnesh@gmail.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/vichupro" target="_blank" rel="noopener noreferrer">vichupro</a></li>
+            <li class="list-group-item">Email: <a href="mailto:viggnesh@yahoo.com">viggnesh@yahoo.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/vichuPro" target="_blank" rel="noopener noreferrer">vichuPro</a></li>
         </ul>
     </div>
 </div>
+
 <div class="card employee-card">
-    <div class="card-header">
+    <div class="card-header bg-success text-white">
+        <h2 class="card-title">Nirmal</h2>
+        <h3 class="card-title"><i class="fas fa-user-cog mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 4</li>
+            <li class="list-group-item">Email: <a href="mailto:nrmal@gmail.com">nrmal@gmail.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/NokiaPro" target="_blank" rel="noopener noreferrer">NokiaPro</a></li>
+        </ul>
+    </div>
+</div>
+
+<div class="card employee-card">
+    <div class="card-header bg-warning text-dark">
         <h2 class="card-title">Ramesh</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 3</li>
             <li class="list-group-item">Email: <a href="mailto:ramesh@gmail.com">ramesh@gmail.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/rameshwireframe" target="_blank" rel="noopener noreferrer">rameshwireframe</a></li>
-        </ul>
-    </div>
-</div>
-<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">Jack</h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 4</li>
-            <li class="list-group-item">Email: <a href="mailto:jack@gmail.com">jack@gmail.com</a></li>
-            <li class="list-group-item">School: University of Minnesota</li>
-        </ul>
-    </div>
-</div>
-<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">5</h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 5</li>
-            <li class="list-group-item">Email: <a href="mailto:five@gmail.com">five@gmail.com</a></li>
             <li class="list-group-item">School: Normandale</li>
         </ul>
     </div>
